data/derived/comb/progs/unify/prog2665.ml.out
Characters 96-128:
  | h :: t -> bigAdd ((mulByDigit (h l1')) a') in
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type int list -> int list
       but an expression was expected of type 'a * int list
